--- a/css_basic/styles.css
+++ b/css_basic/styles.css
@@ -1,24 +1,39 @@
- body {
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
- }
- 
- nav ul {
+  nav ul {
       list-style-type: none;
       margin: 0;
       padding: 0;
       overflow: hidden;
       background-color: #333;
     }
-    nav li {
+nav li {
       float: left;
     }
-    nav li a {
+nav li a {
       display: block;
       color: white;
       text-align: center;
       padding: 14px 16px;
       text-decoration: none;
     }
-    nav li a:hover {
+nav li a:hover {
       background-color: #111;
-    }
+    } 
+body {
+  display: flex;
+  flex-direction: column;
+
+}   
+main {
+  display: flex;
+  flex-direction: row; 
+  flex: auto;
+}  
+article {
+  flex: 2;
+  overflow-y: auto;
+}
+aside {
+  flex: 1;
+  overflow-y: auto;
+}
+
