add log and images

--- a/css_basic/base.css
+++ b/css_basic/base.css
@@ -133,6 +133,8 @@ header li a {
 }
 header li.logo {
 	font-size: 36px;
+	margin-top: 7px;
+	margin-left: 7px;
 }
 header a {
 	text-decoration: none;
