--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -140,3 +140,94 @@ h2 span {
   padding-left: 40px;
   padding-top: 10px;
 }
+
+/* tutorials */
+.tutorials {
+  background-color: #FFFFFF;
+}
+
+.tutorials h2 {
+  color: #071629;
+}
+
+
+.video-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  margin-top: 80px;
+}
+
+.video-list img {
+  width: 255px;
+  height: 154px;
+}
+
+/* video-one {
+  flex-direction: row;
+} */
+.video {
+  /* display: flex; */
+  /* position: absolute; */
+}
+.play-btn-container {
+  position: absolute;
+
+}
+.play-btn{
+  position: relative;
+  bottom: 115px;
+  left: 90px;
+}
+.video p {
+  color: rgba(7,22,41,0.5016);
+}
+.video h3 {
+  font-weight: 700;
+}
+.profile {
+  display: flex;
+  justify-content:  flex-start;
+  align-items: center;
+}
+.profile h4 {
+  margin-left: 10px;
+  color:#C271FF;
+}
+.stars {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.stars p {
+  margin-left: 100px;
+  color:#C271FF;
+}
+
+.membership {
+  background-color: #071629;
+  color: #FFFFFF;
+  width: auto;
+  height: 502px;
+}
+
+.membership-types {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+  gap: 80px;
+  font-size: 14px;;
+}
+
+.membership-register-btn{
+  display: block;
+  margin: 90px auto;
+  padding: 15px;
+  border-radius: 25px;
+  border: none;
+  font-weight: 600;
+  color: #FFFFFF;
+  background-color: #C271FF;
+}
